--- a/index.html
+++ b/index.html
@@ -3,45 +3,68 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz App - Trắc nghiệm</title>
+  <title>Quiz App - Phân quyền & Điểm cao</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f2f2f2;
-      margin: 0;
+      background: #f4f6f8;
       color: #333;
+      text-align: center;
+      padding: 30px;
     }
     .container {
       max-width: 600px;
-      margin: 40px auto;
-      background: white;
-      padding: 20px;
+      margin: auto;
+      background: #fff;
+      padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
     input, button, textarea {
-      width: 100%;
-      padding: 8px;
-      margin: 8px 0;
       font-family: Arial, sans-serif;
+      padding: 10px;
+      margin: 5px;
+      width: 90%;
     }
     button {
-      cursor: pointer;
-      background: #4CAF50;
+      background: #007bff;
       color: white;
       border: none;
-      border-radius: 6px;
-      font-size: 15px;
+      border-radius: 5px;
+      cursor: pointer;
     }
-    button:hover { background: #45a049; }
-    h2, h3 { text-align: center; }
-    .hidden { display: none; }
-    .result-box {
-      background: #e8ffe8;
+    button:hover {
+      background: #0056b3;
+    }
+    .question {
+      margin-bottom: 20px;
+      text-align: left;
+    }
+    .result {
+      margin-top: 20px;
+      font-weight: bold;
+      color: green;
+    }
+    .answer {
+      color: red;
+      font-size: 14px;
+    }
+    .admin-section {
+      background: #eef5ff;
       padding: 10px;
-      border-radius: 6px;
-      margin-top: 10px;
-      text-align: center;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+    #logoutBtn {
+      margin-top: 15px;
+      background: #dc3545;
+    }
+    #logoutBtn:hover {
+      background: #b02a37;
+    }
+    .score-board {
+      color: #444;
+      margin-bottom: 15px;
     }
   </style>
 </head>
@@ -49,173 +72,214 @@
   <!-- Trang đăng nhập -->
   <div class="container" id="loginPage">
     <h2>Đăng nhập / Đăng ký</h2>
-    <input id="username" placeholder="Tên đăng nhập">
-    <input id="password" type="password" placeholder="Mật khẩu">
+    <input type="text" id="username" placeholder="Tên đăng nhập" /><br />
+    <input type="password" id="password" placeholder="Mật khẩu" /><br />
     <button onclick="register()">Đăng ký</button>
     <button onclick="login()">Đăng nhập</button>
-    <p id="msg" style="color:red"></p>
+    <p id="loginMessage"></p>
   </div>
 
-  <!-- Trang trắc nghiệm -->
-  <div class="container hidden" id="quizPage">
+  <!-- Trang người dùng -->
+  <div class="container" id="quizPage" style="display:none;">
     <h2>Bài trắc nghiệm</h2>
-    <div id="questionContainer"></div>
+    <p class="score-board" id="highScoreText"></p>
+    <div id="quiz"></div>
     <button onclick="submitQuiz()">Nộp bài</button>
-    <div id="result" class="result-box hidden"></div>
-    <hr>
-    <button onclick="logout()">Đăng xuất</button>
-    <button onclick="showAdmin()">Quản lý câu hỏi</button>
+    <div class="result" id="result"></div>
+    <button id="logoutBtn" onclick="logout()">Đăng xuất</button>
   </div>
 
-  <!-- Trang quản lý câu hỏi -->
-  <div class="container hidden" id="adminPage">
-    <h2>Quản lý câu hỏi</h2>
-    <textarea id="questionText" placeholder="Nội dung câu hỏi"></textarea>
-    <input id="answerA" placeholder="Đáp án A">
-    <input id="answerB" placeholder="Đáp án B">
-    <input id="answerC" placeholder="Đáp án C">
-    <input id="correct" placeholder="Đáp án đúng (A/B/C)">
-    <button onclick="addQuestion()">Thêm câu hỏi</button>
-    <hr>
-    <h3>Danh sách câu hỏi</h3>
+  <!-- Trang admin -->
+  <div class="container" id="adminPage" style="display:none;">
+    <h2>Quản lý câu hỏi (Admin)</h2>
     <div id="questionList"></div>
-    <button onclick="backToQuiz()">← Quay lại làm bài</button>
+    <div class="admin-section">
+      <h3>Thêm / Cập nhật câu hỏi</h3>
+      <input type="text" id="newQuestion" placeholder="Nhập nội dung câu hỏi" /><br>
+      <textarea id="newOptions" placeholder="Nhập 4 lựa chọn, cách nhau bằng dấu phẩy"></textarea><br>
+      <input type="number" id="correctIndex" placeholder="Vị trí đáp án đúng (0-3)" min="0" max="3"/><br>
+      <button onclick="addOrUpdateQuestion()">Thêm / Cập nhật</button>
+    </div>
+    <button id="logoutBtn" onclick="logout()">Đăng xuất</button>
   </div>
 
   <script>
-    // ===== DỮ LIỆU NGƯỜI DÙNG & CÂU HỎI =====
-    const users = JSON.parse(localStorage.getItem("users") || "{}");
-    const questions = JSON.parse(localStorage.getItem("questions") || "[]");
-    let currentUser = localStorage.getItem("currentUser");
+    // --- Quản lý tài khoản ---
+    const adminUsername = "admin";
+    const adminPassword = "123456";
 
-    const loginPage = document.getElementById("loginPage");
-    const quizPage = document.getElementById("quizPage");
-    const adminPage = document.getElementById("adminPage");
-    const msg = document.getElementById("msg");
-    const resultBox = document.getElementById("result");
+    let currentUser = null;
 
-    function saveData() {
-      localStorage.setItem("users", JSON.stringify(users));
-      localStorage.setItem("questions", JSON.stringify(questions));
-    }
-
-    function showPage(page) {
-      [loginPage, quizPage, adminPage].forEach(p => p.classList.add("hidden"));
-      page.classList.remove("hidden");
-    }
-
-    if (currentUser) {
-      showPage(quizPage);
-      renderQuiz();
-    }
-
-    // ===== ĐĂNG KÝ / ĐĂNG NHẬP =====
     function register() {
-      const u = username.value.trim();
-      const p = password.value.trim();
-      if (!u || !p) return msg.textContent = "Vui lòng nhập đủ thông tin";
-      if (users[u]) return msg.textContent = "Tài khoản đã tồn tại";
-      users[u] = p; saveData();
-      msg.style.color = "green";
-      msg.textContent = "Đăng ký thành công! Hãy đăng nhập.";
+      const user = username.value.trim();
+      const pass = password.value.trim();
+      if (!user || !pass) return alert("Vui lòng nhập đầy đủ thông tin!");
+      if (user === adminUsername) return alert("Không thể tạo tài khoản trùng với admin!");
+      if (localStorage.getItem(user)) return alert("Tài khoản đã tồn tại!");
+      localStorage.setItem(user, JSON.stringify({ password: pass, highScore: 0 }));
+      alert("Đăng ký thành công!");
     }
 
     function login() {
-      const u = username.value.trim();
-      const p = password.value.trim();
-      if (users[u] === p) {
-        currentUser = u;
-        localStorage.setItem("currentUser", u);
-        showPage(quizPage);
-        renderQuiz();
-      } else msg.textContent = "Sai tài khoản hoặc mật khẩu";
+      const user = username.value.trim();
+      const pass = password.value.trim();
+      const savedData = localStorage.getItem(user);
+      if (user === adminUsername && pass === adminPassword) {
+        currentUser = adminUsername;
+        loginPage.style.display = "none";
+        adminPage.style.display = "block";
+        loadQuestionList();
+      } else if (savedData) {
+        const data = JSON.parse(savedData);
+        if (data.password === pass) {
+          currentUser = user;
+          loginPage.style.display = "none";
+          quizPage.style.display = "block";
+          loadQuiz();
+          showHighScore();
+        } else {
+          loginMessage.innerText = "Sai mật khẩu!";
+        }
+      } else {
+        loginMessage.innerText = "Tài khoản không tồn tại!";
+      }
     }
 
     function logout() {
-      localStorage.removeItem("currentUser");
       currentUser = null;
-      showPage(loginPage);
+      quizPage.style.display = "none";
+      adminPage.style.display = "none";
+      loginPage.style.display = "block";
+      username.value = "";
+      password.value = "";
+      result.innerHTML = "";
     }
 
-    // ===== HIỂN THỊ & NỘP BÀI TRẮC NGHIỆM =====
-    function renderQuiz() {
-      const c = document.getElementById("questionContainer");
-      if (questions.length === 0) {
-        c.innerHTML = "<p>Chưa có câu hỏi nào. Vào phần quản lý để thêm!</p>";
-        return;
+    // --- Dữ liệu câu hỏi ---
+    let questions = JSON.parse(localStorage.getItem("questions")) || [
+      {
+        q: "1. Thủ đô của Việt Nam là gì?",
+        options: ["Hà Nội", "TP. Hồ Chí Minh", "Đà Nẵng", "Huế"],
+        correct: 0
+      },
+      {
+        q: "2. 2 + 2 bằng mấy?",
+        options: ["3", "4", "5", "6"],
+        correct: 1
       }
-      c.innerHTML = "";
-      resultBox.classList.add("hidden");
+    ];
+
+    function saveQuestions() {
+      localStorage.setItem("questions", JSON.stringify(questions));
+    }
+
+    // --- Trang Quiz (người dùng) ---
+    function loadQuiz() {
+      quiz.innerHTML = "";
       questions.forEach((q, i) => {
         const div = document.createElement("div");
+        div.classList.add("question");
         div.innerHTML = `
-          <p><b>${i + 1}. ${q.text}</b></p>
-          <label><input type="radio" name="q${i}" value="A"> A. ${q.A}</label><br>
-          <label><input type="radio" name="q${i}" value="B"> B. ${q.B}</label><br>
-          <label><input type="radio" name="q${i}" value="C"> C. ${q.C}</label><br><br>
+          <p><b>${q.q}</b></p>
+          ${q.options.map((opt, j) => `
+            <label><input type="radio" name="q${i}" value="${j}"> ${opt}</label><br>
+          `).join("")}
         `;
-        c.appendChild(div);
+        quiz.appendChild(div);
       });
     }
 
     function submitQuiz() {
-      let correctCount = 0;
+      let correct = 0;
+      let details = "";
       questions.forEach((q, i) => {
-        const selected = document.querySelector(`input[name='q${i}']:checked`);
-        if (selected && selected.value === q.correct) correctCount++;
+        const selected = document.querySelector(`input[name="q${i}"]:checked`);
+        if (selected) {
+          const ans = parseInt(selected.value);
+          if (ans === q.correct) {
+            correct++;
+          } else {
+            details += `<p class='answer'>Sai câu ${i+1}. Đáp án đúng: ${q.options[q.correct]}</p>`;
+          }
+        } else {
+          details += `<p class='answer'>Chưa chọn câu ${i+1}. Đáp án đúng: ${q.options[q.correct]}</p>`;
+        }
       });
-      const total = questions.length;
-      resultBox.textContent = `Bạn trả lời đúng ${correctCount}/${total} câu (${Math.round(correctCount/total*100)}%)`;
-      resultBox.classList.remove("hidden");
+
+      result.innerHTML = `<p>Kết quả: ${correct}/${questions.length} câu đúng</p>${details}`;
+      updateHighScore(correct);
     }
 
-    // ===== QUẢN LÝ CÂU HỎI =====
-    function showAdmin() {
-      showPage(adminPage);
-      renderAdmin();
+    // --- Lưu điểm cao nhất ---
+    function updateHighScore(score) {
+      const data = JSON.parse(localStorage.getItem(currentUser));
+      if (score > (data.highScore || 0)) {
+        data.highScore = score;
+        localStorage.setItem(currentUser, JSON.stringify(data));
+        showHighScore();
+        alert("🎉 Bạn vừa đạt kỷ lục mới!");
+      }
     }
 
-    function addQuestion() {
-      const q = {
-        text: questionText.value,
-        A: answerA.value,
-        B: answerB.value,
-        C: answerC.value,
-        correct: correct.value.toUpperCase()
-      };
-      if (!q.text || !q.correct) return alert("Nhập đầy đủ thông tin!");
-      questions.push(q);
-      saveData();
-      renderAdmin();
-      questionText.value = answerA.value = answerB.value = answerC.value = correct.value = "";
+    function showHighScore() {
+      const data = JSON.parse(localStorage.getItem(currentUser));
+      highScoreText.innerText = `🏆 Điểm cao nhất: ${data.highScore}/${questions.length}`;
     }
 
-    function renderAdmin() {
-      const list = document.getElementById("questionList");
-      list.innerHTML = "";
-      questions.forEach((q, i) => {
-        const div = document.createElement("div");
-        div.innerHTML = `
-          <b>${i + 1}. ${q.text}</b><br>
-          A: ${q.A} | B: ${q.B} | C: ${q.C} | <b>Đúng: ${q.correct}</b>
+    // --- Trang Admin ---
+    let editingIndex = -1;
+
+    function loadQuestionList() {
+      questionList.innerHTML = questions.map((q, i) => `
+        <div class="question">
+          <b>${q.q}</b><br>
+          <small>${q.options.join(" | ")}</small><br>
+          <small>Đáp án đúng: ${q.correct}</small><br>
+          <button onclick="editQuestion(${i})">Sửa</button>
           <button onclick="deleteQuestion(${i})">Xóa</button>
-          <hr>
-        `;
-        list.appendChild(div);
-      });
+        </div>
+        <hr>
+      `).join("");
+    }
+
+    function addOrUpdateQuestion() {
+      const text = newQuestion.value.trim();
+      const opts = newOptions.value.split(",").map(o => o.trim());
+      const correct = parseInt(correctIndex.value);
+      if (!text || opts.length !== 4 || isNaN(correct)) {
+        alert("Vui lòng nhập đầy đủ và chính xác!");
+        return;
+      }
+
+      if (editingIndex >= 0) {
+        questions[editingIndex] = { q: text, options: opts, correct };
+        editingIndex = -1;
+      } else {
+        questions.push({ q: text, options: opts, correct });
+      }
+
+      saveQuestions();
+      loadQuestionList();
+      newQuestion.value = "";
+      newOptions.value = "";
+      correctIndex.value = "";
+      alert("Đã lưu câu hỏi!");
+    }
+
+    function editQuestion(i) {
+      const q = questions[i];
+      newQuestion.value = q.q;
+      newOptions.value = q.options.join(", ");
+      correctIndex.value = q.correct;
+      editingIndex = i;
     }
 
     function deleteQuestion(i) {
       if (confirm("Xóa câu hỏi này?")) {
         questions.splice(i, 1);
-        saveData();
-        renderAdmin();
+        saveQuestions();
+        loadQuestionList();
       }
-    }
-
-    function backToQuiz() {
-      showPage(quizPage);
-      renderQuiz();
     }
   </script>
 </body>
