--- a/index.html
+++ b/index.html
@@ -3,282 +3,205 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz App - Phân quyền & Điểm cao</title>
+  <title>Quiz App</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f6f8;
+      background: #f3f4f6;
       color: #333;
-      text-align: center;
-      padding: 30px;
-    }
-    .container {
-      max-width: 600px;
+      padding: 20px;
+      max-width: 700px;
       margin: auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-    input, button, textarea {
-      font-family: Arial, sans-serif;
-      padding: 10px;
-      margin: 5px;
-      width: 90%;
+    h1, h2 {
+      text-align: center;
     }
-    button {
-      background: #007bff;
+    .hidden {
+      display: none;
+    }
+    .btn {
+      padding: 8px 14px;
+      background: #2563eb;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
+      margin-top: 8px;
     }
-    button:hover {
-      background: #0056b3;
+    .btn:hover {
+      background: #1e40af;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 6px;
+      margin: 4px 0;
     }
     .question {
-      margin-bottom: 20px;
-      text-align: left;
+      background: white;
+      padding: 10px;
+      border-radius: 6px;
+      margin: 10px 0;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     .result {
-      margin-top: 20px;
       font-weight: bold;
       color: green;
-    }
-    .answer {
-      color: red;
-      font-size: 14px;
-    }
-    .admin-section {
-      background: #eef5ff;
-      padding: 10px;
-      border-radius: 10px;
-      margin-top: 20px;
-    }
-    #logoutBtn {
-      margin-top: 15px;
-      background: #dc3545;
-    }
-    #logoutBtn:hover {
-      background: #b02a37;
-    }
-    .score-board {
-      color: #444;
-      margin-bottom: 15px;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <!-- Trang đăng nhập -->
-  <div class="container" id="loginPage">
-    <h2>Đăng nhập / Đăng ký</h2>
-    <input type="text" id="username" placeholder="Tên đăng nhập" /><br />
-    <input type="password" id="password" placeholder="Mật khẩu" /><br />
-    <button onclick="register()">Đăng ký</button>
-    <button onclick="login()">Đăng nhập</button>
-    <p id="loginMessage"></p>
+  <h1>Quiz App</h1>
+
+  <div id="loginDiv">
+    <h2>Đăng nhập</h2>
+    <input type="text" id="username" placeholder="Tài khoản">
+    <input type="password" id="password" placeholder="Mật khẩu">
+    <button class="btn" onclick="login()">Đăng nhập</button>
   </div>
 
-  <!-- Trang người dùng -->
-  <div class="container" id="quizPage" style="display:none;">
+  <div id="quizDiv" class="hidden">
     <h2>Bài trắc nghiệm</h2>
-    <p class="score-board" id="highScoreText"></p>
-    <div id="quiz"></div>
-    <button onclick="submitQuiz()">Nộp bài</button>
-    <div class="result" id="result"></div>
-    <button id="logoutBtn" onclick="logout()">Đăng xuất</button>
+    <div id="quizContainer"></div>
+    <button class="btn" id="submitBtn" onclick="submitQuiz()">Nộp bài</button>
+    <div id="resultDiv" class="result"></div>
+    <button class="btn hidden" id="resetBtn" onclick="resetQuiz()">Làm lại</button>
   </div>
 
-  <!-- Trang admin -->
-  <div class="container" id="adminPage" style="display:none;">
-    <h2>Quản lý câu hỏi (Admin)</h2>
-    <div id="questionList"></div>
-    <div class="admin-section">
-      <h3>Thêm / Cập nhật câu hỏi</h3>
-      <input type="text" id="newQuestion" placeholder="Nhập nội dung câu hỏi" /><br>
-      <textarea id="newOptions" placeholder="Nhập 4 lựa chọn, cách nhau bằng dấu phẩy"></textarea><br>
-      <input type="number" id="correctIndex" placeholder="Vị trí đáp án đúng (0-3)" min="0" max="3"/><br>
-      <button onclick="addOrUpdateQuestion()">Thêm / Cập nhật</button>
-    </div>
-    <button id="logoutBtn" onclick="logout()">Đăng xuất</button>
+  <div id="adminDiv" class="hidden">
+    <h2>Quản lý câu hỏi</h2>
+    <textarea id="questionsInput" rows="10"></textarea>
+    <button class="btn" onclick="saveQuestions()">Cập nhật câu hỏi</button>
+
+    <h3>Kết quả người dùng</h3>
+    <div id="resultsContainer"></div>
+    <button class="btn" onclick="clearResults()">Xóa toàn bộ kết quả</button>
   </div>
 
   <script>
-    // --- Quản lý tài khoản ---
-    const adminUsername = "admin";
-    const adminPassword = "123456";
+    const users = {
+      admin: "123",
+      khach1: "111",
+      khach2: "222"
+    };
 
     let currentUser = null;
-
-    function register() {
-      const user = username.value.trim();
-      const pass = password.value.trim();
-      if (!user || !pass) return alert("Vui lòng nhập đầy đủ thông tin!");
-      if (user === adminUsername) return alert("Không thể tạo tài khoản trùng với admin!");
-      if (localStorage.getItem(user)) return alert("Tài khoản đã tồn tại!");
-      localStorage.setItem(user, JSON.stringify({ password: pass, highScore: 0 }));
-      alert("Đăng ký thành công!");
-    }
-
-    function login() {
-      const user = username.value.trim();
-      const pass = password.value.trim();
-      const savedData = localStorage.getItem(user);
-      if (user === adminUsername && pass === adminPassword) {
-        currentUser = adminUsername;
-        loginPage.style.display = "none";
-        adminPage.style.display = "block";
-        loadQuestionList();
-      } else if (savedData) {
-        const data = JSON.parse(savedData);
-        if (data.password === pass) {
-          currentUser = user;
-          loginPage.style.display = "none";
-          quizPage.style.display = "block";
-          loadQuiz();
-          showHighScore();
-        } else {
-          loginMessage.innerText = "Sai mật khẩu!";
-        }
-      } else {
-        loginMessage.innerText = "Tài khoản không tồn tại!";
-      }
-    }
-
-    function logout() {
-      currentUser = null;
-      quizPage.style.display = "none";
-      adminPage.style.display = "none";
-      loginPage.style.display = "block";
-      username.value = "";
-      password.value = "";
-      result.innerHTML = "";
-    }
-
-    // --- Dữ liệu câu hỏi ---
     let questions = JSON.parse(localStorage.getItem("questions")) || [
       {
-        q: "1. Thủ đô của Việt Nam là gì?",
-        options: ["Hà Nội", "TP. Hồ Chí Minh", "Đà Nẵng", "Huế"],
-        correct: 0
+        question: "1 + 1 = ?",
+        options: ["1", "2", "3", "4"],
+        answer: 1
       },
       {
-        q: "2. 2 + 2 bằng mấy?",
-        options: ["3", "4", "5", "6"],
-        correct: 1
+        question: "Thủ đô của Việt Nam là?",
+        options: ["Hà Nội", "Huế", "Đà Nẵng", "Sài Gòn"],
+        answer: 0
       }
     ];
 
-    function saveQuestions() {
-      localStorage.setItem("questions", JSON.stringify(questions));
+    function login() {
+      const u = document.getElementById("username").value.trim();
+      const p = document.getElementById("password").value.trim();
+      if (users[u] && users[u] === p) {
+        currentUser = u;
+        localStorage.setItem("currentUser", u);
+        document.getElementById("loginDiv").classList.add("hidden");
+
+        if (u === "admin") {
+          document.getElementById("adminDiv").classList.remove("hidden");
+          document.getElementById("questionsInput").value = JSON.stringify(questions, null, 2);
+          loadResults();
+        } else {
+          loadQuiz();
+        }
+      } else {
+        alert("Sai tài khoản hoặc mật khẩu!");
+      }
     }
 
-    // --- Trang Quiz (người dùng) ---
     function loadQuiz() {
-      quiz.innerHTML = "";
+      document.getElementById("quizDiv").classList.remove("hidden");
+      const container = document.getElementById("quizContainer");
+      container.innerHTML = "";
+
+      const userResult = JSON.parse(localStorage.getItem("results") || "{}")[currentUser];
+      if (userResult) {
+        document.getElementById("resultDiv").textContent = `Bạn đã làm: ${userResult.correct}/${questions.length} câu đúng.`;
+        document.getElementById("submitBtn").classList.add("hidden");
+        document.getElementById("resetBtn").classList.remove("hidden");
+        return;
+      }
+
       questions.forEach((q, i) => {
         const div = document.createElement("div");
-        div.classList.add("question");
-        div.innerHTML = `
-          <p><b>${q.q}</b></p>
-          ${q.options.map((opt, j) => `
-            <label><input type="radio" name="q${i}" value="${j}"> ${opt}</label><br>
-          `).join("")}
-        `;
-        quiz.appendChild(div);
+        div.className = "question";
+        div.innerHTML = `<p><b>Câu ${i + 1}:</b> ${q.question}</p>`;
+        q.options.forEach((opt, j) => {
+          div.innerHTML += `
+            <label>
+              <input type="radio" name="q${i}" value="${j}"> ${opt}
+            </label><br>
+          `;
+        });
+        container.appendChild(div);
       });
     }
 
     function submitQuiz() {
       let correct = 0;
-      let details = "";
       questions.forEach((q, i) => {
-        const selected = document.querySelector(`input[name="q${i}"]:checked`);
-        if (selected) {
-          const ans = parseInt(selected.value);
-          if (ans === q.correct) {
-            correct++;
-          } else {
-            details += `<p class='answer'>Sai câu ${i+1}. Đáp án đúng: ${q.options[q.correct]}</p>`;
-          }
-        } else {
-          details += `<p class='answer'>Chưa chọn câu ${i+1}. Đáp án đúng: ${q.options[q.correct]}</p>`;
+        const selected = document.querySelector(`input[name='q${i}']:checked`);
+        if (selected && parseInt(selected.value) === q.answer) {
+          correct++;
         }
       });
+      document.getElementById("resultDiv").textContent = `Bạn làm đúng ${correct}/${questions.length} câu.`;
 
-      result.innerHTML = `<p>Kết quả: ${correct}/${questions.length} câu đúng</p>${details}`;
-      updateHighScore(correct);
+      // Lưu kết quả
+      const results = JSON.parse(localStorage.getItem("results") || "{}");
+      results[currentUser] = { correct };
+      localStorage.setItem("results", JSON.stringify(results));
+
+      document.getElementById("submitBtn").classList.add("hidden");
+      document.getElementById("resetBtn").classList.remove("hidden");
     }
 
-    // --- Lưu điểm cao nhất ---
-    function updateHighScore(score) {
-      const data = JSON.parse(localStorage.getItem(currentUser));
-      if (score > (data.highScore || 0)) {
-        data.highScore = score;
-        localStorage.setItem(currentUser, JSON.stringify(data));
-        showHighScore();
-        alert("🎉 Bạn vừa đạt kỷ lục mới!");
+    function resetQuiz() {
+      const results = JSON.parse(localStorage.getItem("results") || "{}");
+      delete results[currentUser];
+      localStorage.setItem("results", JSON.stringify(results));
+      loadQuiz();
+      document.getElementById("resultDiv").textContent = "";
+      document.getElementById("submitBtn").classList.remove("hidden");
+      document.getElementById("resetBtn").classList.add("hidden");
+    }
+
+    function saveQuestions() {
+      try {
+        const newQs = JSON.parse(document.getElementById("questionsInput").value);
+        questions = newQs;
+        localStorage.setItem("questions", JSON.stringify(questions));
+        alert("Đã cập nhật câu hỏi!");
+      } catch {
+        alert("Dữ liệu không hợp lệ!");
       }
     }
 
-    function showHighScore() {
-      const data = JSON.parse(localStorage.getItem(currentUser));
-      highScoreText.innerText = `🏆 Điểm cao nhất: ${data.highScore}/${questions.length}`;
-    }
-
-    // --- Trang Admin ---
-    let editingIndex = -1;
-
-    function loadQuestionList() {
-      questionList.innerHTML = questions.map((q, i) => `
-        <div class="question">
-          <b>${q.q}</b><br>
-          <small>${q.options.join(" | ")}</small><br>
-          <small>Đáp án đúng: ${q.correct}</small><br>
-          <button onclick="editQuestion(${i})">Sửa</button>
-          <button onclick="deleteQuestion(${i})">Xóa</button>
-        </div>
-        <hr>
-      `).join("");
-    }
-
-    function addOrUpdateQuestion() {
-      const text = newQuestion.value.trim();
-      const opts = newOptions.value.split(",").map(o => o.trim());
-      const correct = parseInt(correctIndex.value);
-      if (!text || opts.length !== 4 || isNaN(correct)) {
-        alert("Vui lòng nhập đầy đủ và chính xác!");
-        return;
+    function loadResults() {
+      const container = document.getElementById("resultsContainer");
+      const results = JSON.parse(localStorage.getItem("results") || "{}");
+      container.innerHTML = "";
+      for (const [user, data] of Object.entries(results)) {
+        const p = document.createElement("p");
+        p.textContent = `${user}: ${data.correct}/${questions.length} câu đúng`;
+        container.appendChild(p);
       }
-
-      if (editingIndex >= 0) {
-        questions[editingIndex] = { q: text, options: opts, correct };
-        editingIndex = -1;
-      } else {
-        questions.push({ q: text, options: opts, correct });
-      }
-
-      saveQuestions();
-      loadQuestionList();
-      newQuestion.value = "";
-      newOptions.value = "";
-      correctIndex.value = "";
-      alert("Đã lưu câu hỏi!");
     }
 
-    function editQuestion(i) {
-      const q = questions[i];
-      newQuestion.value = q.q;
-      newOptions.value = q.options.join(", ");
-      correctIndex.value = q.correct;
-      editingIndex = i;
-    }
-
-    function deleteQuestion(i) {
-      if (confirm("Xóa câu hỏi này?")) {
-        questions.splice(i, 1);
-        saveQuestions();
-        loadQuestionList();
+    function clearResults() {
+      if (confirm("Xóa toàn bộ kết quả người dùng?")) {
+        localStorage.removeItem("results");
+        loadResults();
       }
     }
   </script>
